# netcdf_to_gltf_converter

./: .gitignore  LICENCE  README.md  pyproject.toml  sonar-project.properties
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.md  feature_request.yaml  other.md  task.yaml
.github/workflows/: build.yml  sonarcloud.yml  tests.yml
netcdf_to_gltf_converter/: config.py  converter.py  converter_cli.py  geometries.py  types.py  utils.py  version.py
netcdf_to_gltf_converter/data/: colors.py  mesh.py  vector.py
netcdf_to_gltf_converter/gltf/: builder.py  exporter.py
netcdf_to_gltf_converter/interpolation/: interpolator.py
netcdf_to_gltf_converter/netcdf/: conventions.py  importer.py  netcdf_data.py  parser.py  reader.py  wrapper.py
netcdf_to_gltf_converter/netcdf/dflowfm/: wrapper.py
netcdf_to_gltf_converter/netcdf/ugrid/: conventions.py  ugrid_data.py  wrapper.py
netcdf_to_gltf_converter/netcdf/xbeach/: wrapper.py  xbeach_data.py
netcdf_to_gltf_converter/preprocessing/: connectivity.py  crs.py  interpolation.py  transformation.py  triangulation.py
netcdf_to_gltf_converter/typing/: custom_types.py
netcdf_to_gltf_converter/utils/: arrays.py  sequences.py  validation.py
tests/: test_builder.py  test_config.py  test_converter.py  test_geometries.py  test_utils.py  test_xugrid.py  utils.py
tests/data/: 3x3nodes_rectilinear.nc  test_mesh.py
tests/gltf/: test_builder.py  test_exporter.py
tests/interpolation/: test_interpolator.py
tests/netcdf/: test_importer.py  test_ugrid_data.py
tests/preprocessing/: test_crs.py  test_interpolation.py  test_triangulation.py  utils.py
tests/resources/: 3x3nodes_rectilinear_map.nc  config.json
tests/resources/d-hydro/: 3x3nodes_rectilinear_map.nc  3x3nodes_rectilinear_map.ncdump  config.json  westerschelde_config.json
tests/resources/reference/: 3x3nodes_rectilinear_map.gltf
tests/utils/: test_arrays.py  test_sequences.py
