[tool.poetry]
name = "netcdf-to-gltf-converter"
version = "0.1.0"
description = "Tool that converts D-HYDRO map output NetCDF data to the glTF file format"
authors = ["Deltares"]
license = "MIT"
readme = "README.md"
packages = [{include = "netcdf_to_gltf_converter"}]
repository = "https://github.com/Deltares/netcdf_to_gltf_converter"

[tool.poetry.dependencies]
python = "^3.9"
xarray = "^2023.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
pytest-cov = "^4.0.0"
